--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "repository": {
-  },
+  "repository": {},
   "dependencies": {
     "babel-brunch": "~6.0.0",
-    "brunch": "~2.1.3",
+    "brunch": "~2.2.3",
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
-    "javascript-brunch": "~1.8.0",
-    "uglify-js-brunch": "~1.7.0",
+    "javascript-brunch": "~2.0.0",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix-socket": "^1.1.3",
+    "phoenix_html": "file:deps/phoenix_html",
+    "uglify-js-brunch": "~1.7.0"
   }
 }
